--- a/GitNB Example Notebook.ipynb
+++ b/GitNB Example Notebook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## This is an example notebook \n",
     "\n",
-    "The main purpose of this notebook is to have something to convert with nb_git.  There is nothing interesting to see here. In order to make this point perfectly clear, I will start with some difficult math..."
+    "The main purpose of this notebook is to have something to convert with gitnb.  There is nothing interesting to see here. In order to make this point perfectly clear, I will start with some difficult math..."
    ]
   },
   {
@@ -140,16 +140,16 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "nb_git-repo|master $ nb_git --help\n",
-    "usage: nb_git [-h] {install,configure,nblist,convert} ...\n",
+    "gitnb-repo|master $ gitnb --help\n",
+    "usage: gitnb [-h] {install,configure,nblist,convert} ...\n",
     "\n",
-    "NBGIT: TRACKING FOR PYTHON NOTEBOOKS\n",
+    "GITNB: TRACKING FOR PYTHON NOTEBOOKS\n",
     "\n",
     "positional arguments:\n",
     "  {install,configure,nblist,convert}\n",
-    "    install             installs nb_git into local project (writes to\n",
+    "    install             installs gitnb into local project (writes to\n",
     "                        .git/hooks/pre-commit\n",
-    "    configure           creates local configuration file (./nb_git_config.py)\n",
+    "    configure           creates local configuration file (./gitnb_config.py)\n",
     "    nblist              list all noteboks (that are not in EXCLUDE_DIRS\n",
     "    convert             convert .ipynb files to .nbpy.py files\n",
     "\n",
